<resources>
    <string name="app_name">TSIY</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>

    <string name="cardioPoints">Cardio points</string>
    <string name="calories">Calories</string>
    <string name="time">Duration</string>
    <string name="pause_time">Pause duration</string>
    <string name="weight">Weight</string>
    <string name="repetition">Repetition</string>
    <string name="kg">Kg</string>
    <string name="continueLabel">Continue</string>

    <string-array name="time">
        <item>Minutes</item>
        <item>Seconds</item>
    </string-array>

    <string name="manage_power_activities">manage power activities</string>
    <string name="connect_to_google_fit">connect to google fit</string>
    <string name="manage_activities">manage activities</string>
    <string name="nav_home">Home</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_Settings">Settings</string>


    <string name="name">Name</string>
    <string name="icon">Icon</string>
    <string name="description">Description</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="pause">Pause</string>
    <string name="statistics_are_coming_soon">Statistics are coming soon</string>
    <string name="title_activity_choose_type">ChooseActivityType</string>
    <string name="imageOfActivity">Image of activity</string>
    <string name="edit_activity">Edit activity</string>
    <string name="delete_activity">Delete activity</string>
    <string name="legal_notice">Legal Notice</string>
    <string name="license">License</string>
    <string name="license_content">"Copyright 2020\-2022\nJakob Aschauer, Alexander Schönberger\nLicensed under the"
    </string>
    <string name="dependencies">Dependencies</string>
    <string name="MPAndroidChart">MPAndroidChart by PhilJay</string>
    <string name="description_content">Track your activities</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="resume">Resume</string>
    <string name="_1min">+1min</string>
    <string name="finish">Finish</string>
    <string name="repetitions">Repetitions</string>
    <string name="no_activity_type">Please create a new activity type in settings\n</string>
    <string name="no_power_activity_type">Please create a new power activity type in settings\n</string>
    <string name="icondialoglib">icondialoglib by maltaisn</string>
    <string name="the_strength_is_yours">The strength is yours</string>
    <string name="pick_date">Pick Date</string>
    <string name="delete">Delete</string>
    <string name="github">Github</string>
    <string name="attention">Attention</string>
    <string name="create_one">Create one</string>
    <string name="manage_workouts">Manage Workouts</string>
    <string name="start_power_activity">Start power activity</string>
    <string name="start_activity">start activity</string>
    <string name="start_workout">Start workout</string>
    <string name="start_new_activity">Start new activity</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="de">DE</string>
    <string name="en">EN</string>
    <string name="language">Language</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="generalActivity">general activity</string>
    <string name="powerActivity">power activity</string>
    <string name="filterDoneActivities">Filter done activities</string>
    <string name="cancel">Cancel</string>
    <string name="chooseWorkout">Choose an workout</string>
    <string name="locationPermission">Location permission</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="osmdroid">osmdroid</string>
    <string name="openstreetmapscopyright">© OpenStreetMap contributors</string>
    <string name="goBackMessage">Do you really want to discard your input?</string>
    <string name="ok">OK</string>
    <string name="activities">Activities</string>
    <string name="Day">Day</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="group_by">Group by</string>
    <string name="workout">Workout</string>
    <string name="locationMessage">Location is needed to record the distance of an activity. Ask again?</string>
    <string name="upNext">Up next</string>
    <string name="unableToGetLocation">Unable to detect your location.</string>
    <string name="turnOnLocation">Please turn on location and start the activity again</string>
    <string name="locationIsNeedToRecordDistance">Location permission is needed to record the distance.</string>
    <string name="pleaseInsertAllDataForTheActivity">Please insert all data for the activity</string>
    <string name="pleaseInsertACorrectWeight">Please insert a correct weight</string>
    <string name="zeroKmH" translatable="false">0 km/h</string>
    <string name="delete_workout_plan">Really delete workout plan with done activities?</string>
    <string name="relation_workout_plan_workout_session">The relation between workouts and workout plan will be deleted!
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gnuLicense" translatable="false">"GNU General Public License v3.0 "</string>
</resources>
