<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:tools="http://schemas.android.com/tools"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     tools:context=".screens.ChoosePowerActivityType">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints">

        <TextView android:id="@+id/textView2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="15dp"
                  android:layout_marginTop="5dp"
                  android:layout_marginBottom="5dp"
                  android:text="@string/app_name"
                  android:textColor="@android:color/white"
                  android:textSize="32sp"
                  app:layout_anchorGravity="center"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp" android:layout_weight="1">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent"
        >
            <TextView
                android:id="@+id/weightLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="number"/>
            <TextView
                android:id="@+id/weightType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/kg"/>

        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                android:id="@+id/repetitionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/repetition"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repetition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/repetition"
                android:inputType="number"/>
        </TableRow>
    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/continueLabel"
        app:layout_anchor="@+id/tableLayout"
        app:layout_anchorGravity="bottom|center"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>