<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".screens.fragments.WorkoutScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"/>

            <Chronometer
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="48sp"
                tools:ignore="MissingConstraints"
                tools:targetApi="24"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/cardioPointsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/cardioPoints"/>

                <TextView
                    android:id="@+id/caloriesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="50dp"
                    android:text="@string/calories"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/cardioPointsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="75dp"/>

                <TextView
                    android:id="@+id/caloriesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="75dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/generalActivityHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/kmValueLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="50dp"
                    android:text="@string/distance"/>

                <TextView
                    android:id="@+id/speedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="50dp"
                    android:text="@string/speed"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/generalActivityBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/kmValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="75dp"/>

                <TextView
                    android:id="@+id/speedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="75dp"/>

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp">
                <org.osmdroid.views.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:ignore="MissingConstraints"/>
                <TextView
                    android:id="@+id/copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/openstreetmapscopyright"
                    app:layout_constraintBottom_toBottomOf="@+id/map"
                    app:layout_constraintRight_toRightOf="@+id/map"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <ImageButton
                android:id="@+id/next"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/next"
                android:src="@drawable/ic_baseline_skip_next_24"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/pause"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="75dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/pause"
                    android:src="@drawable/ic_baseline_pause_24"/>

                <ImageButton
                    android:id="@+id/close"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="75dp"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/close"
                    android:src="@drawable/ic_baseline_close_24"/>
            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>