<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.fragments.PauseScreenFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Chronometer
            android:id="@+id/countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            tools:targetApi="24"/>
        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="bottom"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/plusmin"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/_1min"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/skip"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@+id/plusmin" android:text="@string/skip"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/pause"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="50dp"
                android:layout_toEndOf="@+id/skip" android:text="@string/pause"
                android:textSize="16sp"/>

        </RelativeLayout>
    </LinearLayout>
</layout>