<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout android:id="@+id/appBarLayout2"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:theme="@style/AppTheme.AppBarOverlay"
                                                     tools:ignore="MissingConstraints">

        <TextView android:id="@+id/textView2" android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:layout_marginStart="15dp"
                  android:layout_marginTop="5dp" android:layout_marginBottom="5dp"
                  android:text="@string/app_name" android:textColor="@android:color/white"
                  android:textSize="32sp" app:layout_anchorGravity="center"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TableLayout android:id="@+id/tableLayout2" android:layout_width="match_parent"
                 android:layout_height="match_parent" android:layout_marginTop="70dp"
                 android:layout_marginStart="16dp">


        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">

            <TextView android:id="@+id/nameLabel"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/name"
                      android:textSize="16sp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activityType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"/>
        </TableRow>

        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="16dp">

            <TextView android:id="@+id/iconLabel"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/icon"
                      android:textSize="16sp"/>

            <ImageView android:id="@+id/icon"
                       android:layout_width="fill_parent"
                       android:layout_height="fill_parent"
                       android:src="@android:drawable/ic_media_pause"
                       android:layout_weight="1"
                       android:layout_marginEnd="15dp"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="16dp">

            <TextView android:id="@+id/descriptionLabel"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/description"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"/>

        </TableRow>
        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="16dp">

            <TextView android:id="@+id/cardioPointsLabel"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/cardiopoints"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardioPointsValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"/>

        </TableRow>

        <TableRow android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="16dp">

            <TextView android:id="@+id/caloriesLabel"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/calories"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/caloriesValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16sp"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"/>

        </TableRow>
    </TableLayout>

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp" android:gravity="bottom"
                    app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
                    tools:ignore="MissingConstraints">

        <Button android:id="@+id/close" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_marginStart="75dp"
                android:text="@string/close" android:textSize="16sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <Button android:id="@+id/save" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_alignParentEnd="true"
                android:layout_marginEnd="75dp" android:text="@string/save" android:textSize="16sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>